# SteamBot-

./: --3main.cpp  -main.cpp  .gitignore  .gitmodules  .template.env  ApiRequest.cpp  ApiRequest.h  CMakeLists.txt  CustomEMsgHandler.cpp  CustomEMsgHandler.h  SteamApi.cpp  SteamApi.h  SteamCommunity.cpp  SteamCommunity.h  TradeOffer.cpp  TradeOffer.h  WebRequest.cpp  WebRequest.h  consoleColor.cpp  consoleColor.h  main.cpp  readme.md  request.txt  template.env  utils.cpp  utils.h  vcpkg.json
src/: CustomEMsgHandler.cpp  CustomEMsgHandler.h  SteamApi.cpp  SteamApi.h  SteamCommunity.cpp  SteamCommunity.h  TradeOffer.cpp  TradeOffer.h  WebRequest.cpp  consoleColor.cpp  consoleColor.h  main.cpp
